# flaw-havok

./: .gitignore  LICENSE  flaw-havok.cabal
Flaw/: Havok.hs
Flaw/Havok/: FFI.hs  Physics.hs
src/flaw-havok/: .gitignore  dll.def  flaw-havok.sln  flaw-havok.vcxproj  flaw-havok.vcxproj.filters  havok.h  main.cpp  physics.h
