name:                flaw-havok
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw-havok.git

library
  exposed-modules:
    Flaw.Havok
    Flaw.Havok.Physics
  other-modules:
    Flaw.Havok.FFI
  -- other-extensions:    
  build-depends:       base, flaw-base, flaw-ffi, flaw-math, flaw-physics, transformers
  -- hs-source-dirs:      
  default-language:    Haskell2010
